humanize error messages, fix alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -137,6 +137,9 @@ ul {
     background-color: rgba(255, 255, 255, 0.9);
     border-radius: 4px;
   }
+  #error_explanation > ul {
+    padding: 0
+  }
   h3 {
     margin: 0 0 20px;
     text-align: center;
